--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "form-data": "^4.0.0",
+    "mongodb": "^6.8.0",
+    "qs": "^6.13.0"
   }
 }
